src/layout/Navbar.scss
@use "assets/bootstrap/core" as bootstrap;

.wrapper {
    display: flex;
    align-items: center;
}

:global(.navbar) {
    &:global(.bg-white) {
        :global(.navbar-nav) {
            .searchBar:global(.input-group) {
                i {
                    color: bootstrap.$black;
                }

                :global(.form-control) {
                    background: rgba(bootstrap.$black, 0.1);
                    border-radius: 4px;
                }
            }
        }
    }

    .toggle button:focus {
        outline: none;
    }
}

.searchBar {
    margin-left: bootstrap.$margin-lg-vertical;
    :global(.btn) {
        margin: 0;
    }

    &:global(.input-group) {
        border-radius: 25px;
        z-index: 4;
        margin-bottom: 0;
        height: 43px;
        padding-right: 5px;
        :global(.input-group-addon) {
            padding: 10px;
            background: transparent;
            border: none;
            color: rgba(255, 255, 255, 0.7);
        }

        i {
            font-size: 20px;
            color: bootstrap.$white;
            margin-top: 0 !important;
        }

        input {
            background: transparent;
            border: none !important;
            border-radius: 0;
            padding: 12px !important;
            font-size: 12px;
            opacity: 0.5;
            &:focus {
                background: transparent;
            }
        }

        :global(.form-control) {
            opacity: 1;
            color: bootstrap.$white;
            &::placeholder {
                color: white;
            }
        }
    }
}

:global(.dropdown-menu).dropdownNavbar {
    left: -80px;
    &:before,
    &:after {
        left: auto;
        right: 17px;
    }
}

.photo {
    display: inline-block;
    height: 30px;
    width: 30px;
    border-radius: 50%;
    vertical-align: middle;
    overflow: hidden;
    img {
        width: 100%;
    }
}

.absolute {
    position: absolute;
    z-index: 1050;
}

.transparent {
    background: transparent !important;
}

.notification {
    background: bootstrap.$danger;
    color: bootstrap.$white;
    border-radius: bootstrap.$border-radius-xl;
    height: 6px;
    width: 6px;
    position: absolute;
    text-align: center;
    font-size: 12px;
    font-weight: 800;
    top: 10px;
    right: 10px;
    border: 1px solid bootstrap.$danger;
}

.modalSearch {
    :global(.modal-dialog) {
        margin: 20px auto;
        max-width: 650px;
        input {
            border: none;
            font-size: 17px;
            font-weight: 100;
        }
        span {
            font-size: 35px;
            color: bootstrap.$search-gray;
        }

        :global(.form-control) {
            border: none;
            color: bootstrap.$black;
            &::placeholder {
                color: bootstrap.$black;
            }
        }
    }

    :global(.modal-content) {
        :global(.modal-header) {
            padding: 24px;
        }
    }

    :global(.modal-header) :global(.close) {
        color: bootstrap.$dark-background !important;
        top: 30px !important;
    }

    :global(.modal-footer) {
        border-top: 2px solid #f9f9f9;
        margin: 0px 25px 20px;
    }
}

@mixin bar-animation($type) {
    animation: $type 500ms 0s;
    animation-fill-mode: forwards;
}

@media screen and (max-width: 991px) {
    .modalSearch :global(.modal-dialog) {
        padding: 0 40px;
    }

    .bar1,
    .bar3 {
        outline: 1px solid transparent;
        animation-fill-mode: forwards;
    }

    .bar1 {
        top: 0px;
        @include bar-animation(bootstrap.$topbar-back);
    }

    .bar2 {
        outline: 1px solid transparent;
        opacity: 1;
    }

    .bar3 {
        bottom: 0px;
        @include bar-animation(bootstrap.$bottombar-back);
    }

    .toggled {
        .bar1 {
            top: 6px;
            @include bar-animation(bootstrap.$topbar-x);
        }
        .bar2 {
            opacity: 0;
        }
        .bar3 {
            bottom: 6px;
            @include bar-animation(bootstrap.$bottombar-x);
        }
    }

    @keyframes topbar-x {
        0% {
            top: 0px;
            transform: rotate(0deg);
        }
        45% {
            top: 6px;
            transform: rotate(145deg);
        }
        75% {
            transform: rotate(130deg);
        }
        100% {
            transform: rotate(135deg);
        }
    }
    @keyframes topbar-back {
        0% {
            top: 6px;
            transform: rotate(135deg);
        }
        45% {
            transform: rotate(-10deg);
        }
        75% {
            transform: rotate(5deg);
        }
        100% {
            top: 0px;
            transform: rotate(0);
        }
    }

    @keyframes bottombar-x {
        0% {
            bottom: 0px;
            transform: rotate(0deg);
        }
        45% {
            bottom: 6px;
            transform: rotate(-145deg);
        }
        75% {
            transform: rotate(-130deg);
        }
        100% {
            transform: rotate(-135deg);
        }
    }

    @keyframes bottombar-back {
        0% {
            bottom: 6px;
            transform: rotate(-135deg);
        }
        45% {
            transform: rotate(10deg);
        }
        75% {
            transform: rotate(-5deg);
        }
        100% {
            bottom: 0px;
            transform: rotate(0);
        }
    }

    .togglerBar {
        display: block;
        position: relative;
        width: 22px;
        height: 1px;
        border-radius: 1px;
        background: bootstrap.$white;

        &.kebab {
            height: 4px;
            width: 4px;
            margin-bottom: 3px;
            border-radius: 50%;
        }

        & + .togglerBar {
            margin-top: 7px;
        }

        & + .togglerBar.kebab {
            margin-top: 0px;
        }

        &.bar2 {
            width: 17px;
            transition: width 0.2s linear;
        }
    }

    :global(.navbar) {
        &.bg-white:not(.transparent) .togglerBar {
            background-color: bootstrap.$default;
        }

        & .toggled .togglerBar {
            width: 24px;

            & + .togglerBar {
                margin-top: 5px;
            }
        }
    }
}

@media screen and (min-width: 992px) {
    :global(.navbar-collapse) {
        background: none !important;
    }

    .toggle {
        display: none;
    }

    :global(.navbar) {
        :global(.caret) {
            position: absolute;
            left: 80%;
            top: 55%;
            margin-left: 0;
        }
    }
    :global(.navbar-expand-lg) :global(.navbar-nav) :global(.nav-link) {
        padding-right: 0.5rem;
        padding-left: 0.5rem;
    }
}

@media screen and (max-width: 576px) {
    .wrapper {
        .toggle {
            transition: all 1s;

            &.toggled {
                left: -20px;
                position: relative;
                right: unset;
                transition: all 1s;
            }
        }
    }
}

